fixed the sider overflow

--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -2,3 +2,13 @@
 .custom-header {
 	padding: 0;
 }
+/* .sidebar {
+	width: 15%;
+	position: fixed;
+	height: 100%;
+	border-right: 2px solid #e5e5e9;
+	z-index: 3;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+} */
